feat: Intercambiar parejas y migrar cuenta Rodrigo Saad
- Intercambiadas parejas en Principiante: Santiago Mazza ↔ Matias Moreno
- Migrada cuenta temporal de Rodrigo Saad a cuenta real (rodrisaad88)
- Scripts de migración y verificación creados

--- a/frontend/public/.htaccess
+++ b/frontend/public/.htaccess
@@ -65,7 +65,14 @@ Options -Indexes
   
   <FilesMatch "\.(html|htm)$">
     Header set Cache-Control "max-age=0, no-cache, no-store, must-revalidate"
+    Header set Pragma "no-cache"
+    Header set Expires "0"
   </FilesMatch>
+  <Files "index.html">
+    Header set Cache-Control "max-age=0, no-cache, no-store, must-revalidate"
+    Header set Pragma "no-cache"
+    Header set Expires "0"
+  </Files>
 </IfModule>
 
 # Tipos MIME para PWA
